<resources>
    <string name="app_name">Treuepunkte</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Listview Details -->
    <string name="listview_name">Name</string>
    <string name="listview_description">Description</string>
    <string name="listview_distance">Distance</string>

    <!-- Shop Details -->
    <string name="shop_name">Shop Name</string>
    <string name="shop_description">Beschreibung</string>
    <string name="shop_button">Kommentieren</string>

    <!-- QR Code -->
    <string name="qrcode_description">Mit diesem QR-Code werden Ihre Punkte auf Ihrem Konto gut geschrieben.</string>

    <!-- Navigation -->
    <string name="menu_home">Home</string>
    <string name="menu_overview">Übersicht</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_favorites">Favoriten</string>
    <string name="menu_qr">Mein QR-Code</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_logout">Abmelden</string>

    <!-- ShopListView activity_shop -->
    <string-array name="shop_names">
        <item>dm</item>
        <item>Saturn</item>
        <item>Jack and Jones</item>
    </string-array>

    <string-array name="shop_description">
        <item>Drogerie</item>
        <item>Elektornik</item>
        <item>Bekleidung</item>
    </string-array>

    <string-array name="shop_distance">
        <item>200m</item>
        <item>1200m</item>
        <item>500m</item>
    </string-array>

</resources>
