<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item  android:id="@+id/nav_overview"
            android:icon="@mipmap/baseline_shopping_basket_black_18dp"
            android:title="@string/menu_overview"/>

        <item  android:id="@+id/nav_shops"
            android:icon="@mipmap/baseline_account_circle_black_18dp"
            android:title="@string/menu_shops"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/baseline_settings_black_18dp"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/baseline_launch_black_18dp"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
