<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_white">

    <TextView
        android:id="@+id/shopNameView"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/listview_name"
        android:textSize="30sp"
        android:fontFamily="@font/BrooklynSmooth"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/shopDescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/shopNameView"
        android:layout_marginTop="80dp"
        android:text="@string/listview_description"
        android:fontFamily="@font/BrooklynSmooth"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/shopDistanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/shopDescriptionView"
        android:layout_marginEnd="30dp"
        android:text="@string/listview_distance"
        android:fontFamily="@font/BrooklynSmooth"
        android:textSize="18dp"/>
</RelativeLayout>