<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopDetailsActivity"
    android:background="@drawable/gradient_white">

    <ImageView
        android:id="@+id/shopImageView"
        android:layout_width="209dp"
        android:layout_height="129dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/shopNameTextView"
        android:layout_width="185dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/shop_name"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopImageView"
        android:fontFamily="@font/BrooklynSmooth"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/shopDescription"
        app:layout_constraintTop_toBottomOf="@+id/shopNameTextView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:padding="20dp"
        android:text="@string/shop_description"
        android:textSize="20sp"
        android:fontFamily="@font/BrooklynSmooth"/>

    <Button
        android:id="@+id/shopCommentButton"
        android:layout_width="200sp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/BrooklynSmooth"
        android:paddingTop="10dp"
        android:text="@string/shop_button"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/shopDescription"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="92dp" />

    <ListView
        android:id="@+id/shopListView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopCommentButton"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>